<resources>
    <string name="app_name">novel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="book_shelf">BookShelf</string>
    <string name="discovery">Discovery</string>
    <string name="rank">Rank</string>
    <string name="me">Me</string>]
    <string name="search_hint">Search name or author</string>
    <string name="search">Search</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="clear_all">Clear all</string>
    <string name="add">+Add</string>
    <string name="added">Added</string>
    <string name="from_source">From: %s</string>
    <string name="brief_introduction">Brief Introduction</string>
    <string name="add_to_bookshelf">Add BookShelf</string>
    <string name="start_read">Start Read</string>
    <string name="loading">Loading</string>
    <string name="update_time">Update Time: %s</string>
    <string name="menu">Menu</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="settings">Settings</string>
    <string name="next_chapter">Next</string>
    <string name="prev_chapter">Prev</string>
    <string name="remove_book_source_and_retry">Remove %s and retry</string>
    <string name="retry">Retry</string>
    <string name="book_source_error">%s error, please select the process method:</string>
    <string name="brightness">Brightness</string>
    <string name="background">Background</string>
    <string name="page_mode">Page mode</string>
    <string name="follow_system">Follow system</string>
    <string name="text_size">Text Size</string>
    <string name="a_minus">A-</string>
    <string name="a_add">A+</string>
    <string name="system_fonts">System fonts</string>
    <string name="more_setting">More settings</string>
    <string name="start_download">Start Download</string>
    <string name="unknown">Unknown</string>
    <string name="select_all">Select All</string>
    <string name="finish">Finish</string>
    <string name="delete">Delete</string>
    <string name="delete_with_num">Delete(%d)</string>
    <string name="update">Update</string>
</resources>