<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="top.mcwebsite.novel.ui.search.SearchViewModel" />

    </data>

    <LinearLayout
        android:id="@+id/search_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.search.SearchFragment"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <!--  TODO 优化为 LinearLayout  -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="34dp"
                android:layout_height="24dp"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:scaleType="fitCenter"
                android:onClick="@{() -> viewModel.back()}"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/search_content"
                app:layout_constraintBottom_toBottomOf="@id/search_content"
                android:contentDescription="@null"
                app:tint="@color/black" />

            <EditText
                android:id="@+id/search_content"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/bg_search_content"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawableTint="@color/black"
                android:gravity="center_vertical|start"
                android:text="@={viewModel.searchContent}"
                android:hint="@string/search_hint"
                android:inputType="text"
                android:paddingStart="3dp"
                android:paddingEnd="0dp"
                android:textSize="15sp"
                android:lines="1"
                android:imeOptions="actionSearch"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintEnd_toStartOf="@id/search_btn"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_marginStart="10dp"
                android:textColor="@android:color/holo_blue_light"
                android:onClick="@{() -> viewModel.search()}"
                app:layout_constraintStart_toEndOf="@id/search_content"
                app:layout_constraintTop_toTopOf="@id/search_content"
                app:layout_constraintBottom_toBottomOf="@id/search_content"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/recent_search_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/recent_searches"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_all"
                android:onClick="@{() -> viewModel.clearAll()}"
                app:layout_constraintTop_toTopOf="@id/recent_search_text"
                app:layout_constraintBottom_toBottomOf="@id/recent_search_text"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recent_search_recycle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recent_search_text"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_result_recycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>



</layout>