<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.bookdetail.BookDetailFragment">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@null"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="龙族"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/book_cover"
        android:layout_width="92dp"
        android:layout_height="130dp"
        android:contentDescription="@null"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/default_img_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginStart="5dp"
        tools:text="龙族"
        app:layout_constraintStart_toEndOf="@id/book_cover"
        app:layout_constraintTop_toTopOf="@id/book_cover" />

    <TextView
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        tools:text="江南老贼"
        app:layout_constraintStart_toEndOf="@id/book_cover"
        app:layout_constraintTop_toBottomOf="@id/book_name" />

    <TextView
        android:id="@+id/book_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        tools:text="来源：未知"
        app:layout_constraintStart_toEndOf="@id/book_author"
        app:layout_constraintTop_toBottomOf="@id/book_name"/>

    <TextView
        android:id="@+id/book_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:padding="2dp"
        android:textColor="@android:color/white"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_book_type"
        app:layout_constraintTop_toBottomOf="@id/book_author"
        app:layout_constraintStart_toEndOf="@id/book_cover"
        tools:text="玄幻奇幻" />

    <TextView
        android:id="@+id/book_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/book_type"
        app:layout_constraintStart_toEndOf="@id/book_cover"
        tools:text="第99章：tmd，退钱" />

    <TextView
        android:id="@+id/updateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        tools:text="Update Time: 2021-01-02"
        app:layout_constraintStart_toEndOf="@id/book_cover"
        app:layout_constraintTop_toBottomOf="@id/book_last" />

    <TextView
        android:id="@+id/introduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brief_introduction"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/book_cover"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/book_introduce_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        tools:text="Loading..."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start_read_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introduce" />

    <TextView
        android:id="@+id/add_bookshelf_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="14sp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/add_to_bookshelf"
        tools:text="放入书架"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/divider2"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_bookshelf_btn"
        app:layout_constraintEnd_toStartOf="@id/start_read_btn"/>

    <TextView
        android:id="@+id/start_read_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/start_read"
        tools:text="立即阅读"
        app:layout_constraintStart_toEndOf="@id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>